--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
         "vite": "^6.2.4"
     },
     "dependencies": {
-        "sweetalert2": "^11.19.1"
+        "@gsap/react": "^2.1.2",
+        "animate.css": "^4.1.1",
+        "sweetalert2": "^11.19.1",
+        "swiper": "^11.2.6"
     }
 }
