--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
 APP_NAME="NEXTECH"
 APP_ENV=production
 APP_KEY=base64:2lRq2DMhsHddHXwEO+yP1a8Le2oot5k/H00GLeE+ADA=
-APP_DEBUG=true
+APP_DEBUG=false
 APP_URL=http://localhost
 
 APP_LOCALE=es
